# excel-to-json

./: Cargo.toml  PHP_INTEGRATION.md  README.md  output.json  test_binary.sh
.github/workflows/: deploy-pages.yml  test.yml
docs/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  update-rust-docs.sh
docs/src/content/docs/: 404.md  index.mdx
docs/src/content/docs/getting-started/: installation.md  introduction.md  quick-start.md
docs/src/content/docs/reference/: cli-options.md  error-handling.md  output-format.md  rust-api.mdx
docs/src/content/docs/usage/: command-line.md  javascript.md  other-languages.md  typescript.md
docs/src/styles/: custom.css
examples/: php_usage.php
resources/: Item Master Field Values.xlsx
src/: excel_reader.rs  lib.rs  main.rs  models.rs  output.rs  processor.rs
