[package]
name = "import_cascade_fields"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.25"          # Excel file reading with formula evaluation
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization
serde_json = "1.0"         # JSON output for PHP integration
clap = { version = "4.5", features = ["derive"] }  # Command-line argument parsing
anyhow = "1.0"             # Error handling
tracing = "0.1"            # Logging
tracing-subscriber = "0.3" # Log formatting

[dev-dependencies]
tempfile = "3.8"           # Temporary file/directory creation for tests
